gcc/testsuite/rust/rustc/ui/parser/issues/issue-45296_dg.rs
fn main() {
    let unused = ();

    #![allow(unused_variables)] // { dg-error "" "" { target *-*-* } }
    fn foo() {}
}

